# filmony

./: .gitignore  Makefile  README.md  compose.prod.yml  compose.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/src/: celery_app.py  main.py
backend/src/api/: router.py
backend/src/api/auth/: routes.py  schemas.py
backend/src/api/cards/: feed_post_feed_mapping.py  routes.py  schemas.py
backend/src/api/catalog/: routes.py  schemas.py
backend/src/api/feed/: routes.py
backend/src/api/feed_posts/: routes.py  schemas.py
backend/src/api/films/: routes.py  schemas.py
backend/src/api/notifications/: routes.py
backend/src/api/profile/: me_routes.py  schemas.py  users_routes.py
backend/src/api/reactions/: routes.py  schemas.py
backend/src/api/search/: __init__.py  routes.py  schemas.py
backend/src/api/taste_quiz/: routes.py  schemas.py
backend/src/api/watchlist/: routes.py  schemas.py
backend/src/conf/: __init__.py  settings.py
backend/src/const/: feed.py  reaction_packs.py  text_limits.py
backend/src/core/: database.py  rustfs_s3_client.py
backend/src/integrations/: __init__.py
backend/src/integrations/telegram/: __init__.py  bot_api_client.py
backend/src/migrations/: env.py
backend/src/migrations/versions/: 001_users.py  110da8652616_enchant_user.py  17e05799f842_react.py  1ee1c4bb5dd6_merge_heads.py  33622715f72c_edit_len_comm.py  8a555730c078_init.py  9ff94784da45_comms.py  a1b2c3d4e5f6_movie_card_favorite.py  a2b3c4d5e678_user_card_youtube_external_partial.py  a7b8c9d0e123_user_card_category.py  ac3f8989b766_init.py  b2c3d4e5f6a7_reaction_type_slim.py  b3c4d5e6f789_global_feed_sort_indexes.py  b5c6d7e8f901_movie_card_audio_vibe.py  bd8f039d04fe_card.py  c4d5e6f789ab_reaction_media_catalog.py  c4d5e6f7a890_taste_quiz.py  c9d0e1f2a345_drop_movie_card_audio_repeat.py  d1e2f3a45678_user_reactions_per_type_unique.py  e7f9a8b01234_user_watchlist_film.py  f8e7d6c5b4a3_query_perf_indexes.py  g8h9i0j1k234_movie_card_watch_note.py  h9i0j1k2l346_movie_card_comment_text_len_250.py  i1j2k3l4m569_drop_user_recent_reaction.py  j2k3l4m5n678_feed_post.py  k7l8m9n0o123_catalog_item_created_at_idempotent.py  l4m5n6o7p890_feed_post_comment.py  m3n4o5p89012_merge_k7_z9_heads.py  m5n6o7p8q901_film_kinopoisk_descriptions.py  n0o1p2q3r678_movie_card_comment_image_url.py  p3q4r5s6t890_game_rawg_catalog.py  q7r8s9t0u123_link_manual_cards_to_rawg_catalog.py  r0s1t2u3v456_user_reaction_reactor_window_index.py  u1v2w3x4y890_universal_user_cards.py  v8w9x0y1z234_rename_movie_card_persistence_to_user_card.py  w1x2y3z4a01_watchlist_entry.py  w1x2y3z4a02_migrate_watchlist_films.py  w1x2y3z4a03_drop_user_watchlist_film.py  w1x2y3z4a04_user_card_is_planned.py  w1x2y3z4a05_watchlist_watch_with_user_ids.py  (+6 more)
backend/src/models/: __init__.py  base.py  card_comment.py  card_tag.py  catalog_item.py  feed_post.py  feed_post_comment.py  film.py  game.py  movie_card.py  movie_card_comment.py  movie_card_enums.py  movie_card_tag.py  reaction_target_kind.py  reaction_type.py  subscribed_activity_digest_state.py  taste_quiz_enums.py  taste_quiz_invite.py  taste_quiz_pair_progress.py  taste_quiz_session.py  taste_quiz_session_card.py  user.py  user_card.py  user_card_category.py  user_reaction.py  user_recent_reaction.py  user_subscription.py  user_watchlist_film.py  watchlist_entry.py
backend/src/providers/: __init__.py  base_provider_http_transport.py  shared_async_http.py
backend/src/tasks/: __init__.py  ping.py  telegram_engagement.py
backend/src/tests/: README.md  conftest.py  telegram_auth_helpers.py  test_celery_app.py  test_http_url.py  test_telegram_auth.py
backend/src/utils/: app_utils.py  case_converter.py  feed_post_media_key.py  http_url.py  reaction_asset_key.py  reaction_urls.py  rustfs_get_object.py  rustfs_put_object.py  user_card_media_key.py
(+1094 files in other folders)
