[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "ipython==9.13.0",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "ruff==0.15.12",
]
prod = [
    "httpx==0.28.0",
    "alembic==1.18.4",
    "fastapi==0.136.1",
    "pydantic==2.13.3",
    "pydantic-settings==2.14.0",
    "pyjwt==2.12.1",
    "sqlalchemy[asyncio]==2.0.49",
    "uvicorn==0.46.0",
    "asyncpg==0.31.0",
]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
pythonpath = ["src/"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"


[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PD",  # pandas-vet
    "PL",  # pylint
    "TRY", # tryceratops
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",
    "PLW0603",
    "E402",
    "F401",
    "PLC0415",
    "PLR0913",
    "PLR2004",
    "TRY003",
    "N818",
    "RUF001",
    "B008",
    "PLR0912",
    "N802",
    "N999",
    "ARG001",
    "N805",
    "RUF003",
    "RUF002",
]

[tool.ruff.lint.isort]
known-first-party = ["src"]
